# mouse-configurator

./: Cargo.toml  LICENSE  Makefile  hp-mouse-configurator
.github/workflows/: ci.yml
appimage/: build-podman.sh  build.py  install-and-build.sh
data/: com.hp.mouse-configurator.appdata.xml  com.hp.mouse-configurator.desktop  org.pop_os.mouseconfigurator.appdata.xml  org.pop_os.mouseconfigurator.desktop  org.pop_os.pkexec.mouseconfigurator.policy
data/resources/: resources.gresource.xml
debian/: changelog  control  rules
examples/: query.rs  reset.rs
src/: button.rs  enumerate.rs  event.rs  hid.rs  lib.rs  main.rs
src/gui/: binding_dialog.rs  bindings.rs  buttons_widget.rs  device_monitor_process.rs  dialog.rs  dialogs.rs  keycode.rs  main.rs  profile.rs  swap_button_dialog.rs  util.rs  worker.rs
