[package]
name = "hp-mouse-configurator"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.4"
relm4 = { version =  "0.4", features = ["macros"] }

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.hidapi]
version = "1.3.4"
default-features = false
features = ["linux-static-hidraw"]
