[package]
name = "hp-mouse-configurator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "hp-mouse-configurator"
path = "src/gui/main.rs"

[dependencies]
gtk4 = "0.4"
libc = "0.2"
nix = "0.24"
once_cell = "1.10"
relm4 = { version =  "0.4", features = ["macros"] }
udev = "0.6"

[dependencies.bitvec]
version = "1"
default-features = false
features = ["std"]

[build-dependencies]
gio = "0.15.10"

[features]
appimage = []
