[package]
name = "mouse-configurator"
version = "1.0.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "mouse-configurator"
path = "src/gui/main.rs"

[dependencies]
gtk4 = "0.4"
libc = "0.2"
nix = "0.24"
once_cell = "1.10"
rand = "0.8"
relm4 = { version =  "0.4", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
udev = "0.6"

[dependencies.bitvec]
version = "1"
default-features = false
features = ["std"]

[build-dependencies]
gio = "0.15.10"

[features]
appimage = []
